--- a/_posts/life/2014-12-18-1stp.md
+++ b/_posts/life/2014-12-18-1stp.md
@@ -5,5 +5,5 @@ tags:
 - life
 ---
     早就听说github是程序员的facebook,也一直想拥有自己的博客来记录生活随想和技术心得已记录自己的成长，今天我终于有了自己的github pages,故以此博客记之。
-    尽管设计师都有设计情怀，程序员都有黑客情怀，我也想设计一个独特风格的博客，奈何技术有限，只好克隆了一个别人的模板。在网上浏览了一些模板后，发现[vincentzhwg](http://blog.kissdata.com){:target="_blank"}的博客简介明了，得体大方，我很喜欢这种风格，所以才用了[vincentzhwg](http://blog.kissdata.com){:target="_blank"}的模板。
-    [vincentzhwg](http://blog.kissdata.com){:target="_blank"}博客的技术文章让人觉得受用不已，并且他的happiness标签的内容的却能给人带来很多happiness,同时他的博客排版很优雅，值得我借鉴，所以我保留了他的博客内容。
+    尽管设计师都有设计情怀，程序员都有黑客情怀，我也想设计一个独特风格的博客，奈何技术有限，只好克隆了一个别人的模板。在网上浏览了一些模板后，发现[vincentzhwg](http://blog.kissdata.com)的博客简介明了，得体大方，我很喜欢这种风格，所以才用了[vincentzhwg](http://blog.kissdata.com){:target="_blank"}的模板。
+    [vincentzhwg](http://blog.kissdata.com){:target="_blank"} 博客的技术文章让人觉得受用不已，并且他的happiness标签的内容的却能给人带来很多happiness,同时他的博客排版很优雅，值得我借鉴，所以我保留了他的博客内容。
